# MaterialAgent

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  stable_solver.yaml
docs/: IMPLEMENTATION_PLAN.md  MATERIAL_AGENT_FINAL_PLAN.md  RESEARCH_NOTES.md
material_agent/: __init__.py  agent.py  cli.py  constants.py  io_utils.py  report.py  schemas.py
material_agent/evaluation/: critic.py  selector.py  video_metrics.py
material_agent/evidence/: __init__.py  crops.py  physgm_distribution.py  vlm_material.py
material_agent/loaders/: __init__.py  partphys_outputs.py
material_agent/reasoning/: __init__.py  candidate_sampler.py  posterior.py  skill_memory.py
material_agent/simulation/: __init__.py  config_compiler.py  runner.py
tests/: test_material_agent_core.py
