[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "material-agent"
version = "0.1.0"
description = "Part-level material parameter agent for PhysGM and PartPhysAgent outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
  "PyYAML",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["material_agent*"]
